[package]
name = "gemmy"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
csv = { version = "1.3.1"}
uuid = { version = "1.11.0", features = ["v4"] }

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
incremental = false
overflow-checks = false
rpath = false
lto = "thin"
codegen-units = 1

[[bench]]
name = "simple"
harness = false

[[bench]]
name = "detailed"
harness = false