[package]
name = "gemmy"
version = "0.1.1"
edition = "2021"
authors = ["pepemon42069 <pepemon42069@proton.me>"]
license = "ISC"
description = "Gemmy is a high performance orderbook written in rust."
repository = "https://github.com/pepemon42069/gemmy.git"

[dependencies]
uuid = { version = "1.11.0", features = ["v4"] }
serde = { version = "1.0.216", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5.1" }
csv = { version = "1.3.1"}

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
incremental = false
overflow-checks = false
rpath = false
lto = "thin"
codegen-units = 1

[[bench]]
name = "gemmy_benchmarks"
harness = false