[package]
name = "gemmy"
version = "0.1.3"
edition = "2021"
authors = ["pepemon42069 <pepemon42069@proton.me>"]
license = "ISC"
description = "Gemmy is a high performance orderbook written in rust."
repository = "https://github.com/pepemon42069/gemmy.git"

[dependencies]
uuid = { version = "1.11.0", features = ["v4"] }
serde = { version = "1.0.216", features = ["derive"] }

# tokio stack
prost = "0.13.4"
tokio = {version = "1.42.0", features = ["full"]}
tonic = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
dotenv = "0.15.0"

# kafka
rdkafka = { version = "0.37.0"}

[dev-dependencies]
criterion = { version = "0.5.1" }
csv = { version = "1.3.1"}

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
incremental = false
overflow-checks = false
rpath = false
lto = "thin"
codegen-units = 1

[[bench]]
name = "gemmy_benchmarks"
harness = false

[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "gemmy-engine"
path = "src/main.rs"